closer look block subtitle spacing fix

--- a/frontend/scss/molecules/_m-listing.scss
+++ b/frontend/scss/molecules/_m-listing.scss
@@ -1940,6 +1940,7 @@ $f-audio-subtitle: generate-font-obj(
 
 .m-listing--label.o-blocks__block .m-listing__meta {
   min-height: 139px;
+  padding-bottom: 65px;
 }
 
 .m-listing--label.o-blocks__block .f-tag {
